fixed entire map not showing up when scaled down

--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,18 @@
 * {
     margin: 0;
     padding: 0;
+    overflow: scroll;
 }
 
 body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 1000px;
 }
 
 .visual {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    overflow: scroll;
+    padding: 20px;
+    width: auto;
 }
 
 .title {
@@ -65,9 +62,9 @@ body {
 }
 
 .source {
-    align-self: flex-end;
     padding-top: 20px;
-    padding-right: 50px;
+    padding-right: 20px;
+    text-align: right;
 }
 
 .sourceText{
